[gd_scene load_steps=12 format=3 uid="uid://bq3sebmy1cg7f"]

[ext_resource type="Texture2D" uid="uid://djbaubw3ev8fe" path="res://Dungeons/Enemies/NES - The Legend of Zelda - Dungeon Enemies.png" id="1_hxsg2"]
[ext_resource type="Script" path="res://Dungeons/Enemies/skeleton.gd" id="1_s1ti6"]
[ext_resource type="Script" path="res://Universal Scripts/hit_box.gd" id="3_brha7"]
[ext_resource type="Script" path="res://Universal Scripts/hurt_box.gd" id="4_34wm2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8xmh8"]
atlas = ExtResource("1_hxsg2")
region = Rect2(1, 59, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5xcl"]
size = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_7ptmo"]
resource_name = "Stun"

[sub_resource type="Animation" id="Animation_mqpbc"]
resource_name = "Move"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_r08pl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7mvr"]
_data = {
"Move": SubResource("Animation_mqpbc"),
"RESET": SubResource("Animation_r08pl"),
"Stun": SubResource("Animation_7ptmo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_86i26"]
size = Vector2(14, 16)

[node name="Skeleton" type="CharacterBody2D" node_paths=PackedStringArray("WallDetector", "timer")]
collision_layer = 4
script = ExtResource("1_s1ti6")
speed = 20.0
WallDetector = NodePath("WallDetector")
timer = NodePath("Change Direction")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_8xmh8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d5xcl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a7mvr")
}
autoplay = "Move"

[node name="WallDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)

[node name="Change Direction" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
monitoring = false
script = ExtResource("3_brha7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_86i26")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("4_34wm2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_86i26")
